--- a/style.css
+++ b/style.css
@@ -708,11 +708,12 @@ p {
     font-weight: 700;
     border-radius:40px;
     border: solid 1px #E47641;
-    margin-left:25px;
 }
 
 .social {
     padding:15px;
+    display: flex;
+    justify-content: center;
 }
 
 h2 {
@@ -795,6 +796,7 @@ h4 {
     background:#f3976C;
     font-size: 16px;
     color: black!important;
+    width: 40%;
 }
 
 .btn-atomic-tangerine:hover {
@@ -947,7 +949,7 @@ h4 {
         background: rgba(0, 0, 0, .05);
         text-align: left;
         padding-left: 15px;
-        
+        width: 100%;
     }
     .nav > li:hover {
         background: rgba(0, 0, 0, .08);
