--- a/style.css
+++ b/style.css
@@ -364,10 +364,14 @@ a:hover {
 @media (min-width: 768px) {
     .site-navigation {
         position: absolute;
-        top: 30%;
-        right: 130px;
+        top: 50%;
+        right: 10px;
         transform: translate(0, -50%);
         -webkit-transform: translateY(-50%);
+    }
+    #bloc-7
+    {
+        margin-left: 20%;
     }
     .nav > li .dropdown-menu a,
     .nav > li .dropdown-menu a:hover {
@@ -662,7 +666,6 @@ label{
 .form-control{
     margin-top:10px;
     padding-bottom:10px;
-    width:40%;
 }
 
 .hero-bloc-text {
@@ -796,7 +799,8 @@ h4 {
     background:#f3976C;
     font-size: 16px;
     color: black!important;
-    width: 40%;
+    width: 10em;
+    margin-left: 3%;
 }
 
 .btn-atomic-tangerine:hover {
